[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15"
dialoguer = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
tui = "0.19.0"
crossterm = "0.27"
chrono = "0.4"

